<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/indigo">

    <TextView
        android:id="@+id/tv_header"
        style="@style/mainHeaderText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/base_margins"
        android:text="@string/the_guide_header"
        app:layout_constraintBottom_toTopOf="@+id/iv_main_picture"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/iv_main_picture"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_header"
        tools:src="@drawable/rm" />

    <LinearLayout
        android:id="@+id/button_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/base_margins"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:paddingBottom="40dp">

        <Button
            android:id="@+id/btn_characters"
            style="@style/mainButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/characters" />

        <Button
            android:id="@+id/btn_locations"
            style="@style/mainButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/locations" />

        <Button
            android:id="@+id/btn_episodes"
            style="@style/mainButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/episodes" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>